missing tag per nascondere back

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			</div>
 		</div-->
 
-		<div data-role="page" id="item" data-add-back-btn="true"  >
+		<div data-role="page" id="item" data-add-back-btn="false">
 					<div data-role="header"    data-position="fixed">
 				<h1>Error Loading</h1>
 			</div>
